--- a/UserExperience/views/register.ui
+++ b/UserExperience/views/register.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>596</height>
+    <height>600</height>
    </rect>
   </property>
   <property name="palette">
@@ -89,6 +89,11 @@
      <height>581</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
    <property name="title">
     <string>Registro</string>
    </property>
@@ -101,6 +106,11 @@
       <height>50</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
    </widget>
    <widget class="QLineEdit" name="carrera">
     <property name="geometry">
@@ -110,6 +120,11 @@
       <width>150</width>
       <height>50</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
     </property>
    </widget>
    <widget class="QLabel" name="label">
@@ -151,9 +166,9 @@
    <widget class="QPushButton" name="registerButton">
     <property name="geometry">
      <rect>
-      <x>260</x>
-      <y>370</y>
-      <width>171</width>
+      <x>180</x>
+      <y>340</y>
+      <width>311</width>
       <height>71</height>
      </rect>
     </property>
@@ -304,6 +319,7 @@
     </property>
     <property name="font">
      <font>
+      <pointsize>14</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
@@ -396,10 +412,8 @@
     </property>
     <property name="font">
      <font>
-      <family>MS Shell Dlg 2</family>
       <pointsize>8</pointsize>
       <weight>75</weight>
-      <italic>false</italic>
       <bold>true</bold>
      </font>
     </property>
@@ -485,6 +499,7 @@
     </property>
     <property name="font">
      <font>
+      <pointsize>8</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
