--- a/UserExperience/views/register.ui
+++ b/UserExperience/views/register.ui
@@ -100,24 +100,24 @@
    <widget class="QLineEdit" name="studentId">
     <property name="geometry">
      <rect>
-      <x>620</x>
-      <y>180</y>
-      <width>150</width>
+      <x>610</x>
+      <y>190</y>
+      <width>200</width>
       <height>50</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>10</pointsize>
+      <pointsize>24</pointsize>
      </font>
     </property>
    </widget>
    <widget class="QLineEdit" name="carrera">
     <property name="geometry">
      <rect>
-      <x>620</x>
+      <x>610</x>
       <y>270</y>
-      <width>150</width>
+      <width>200</width>
       <height>50</height>
      </rect>
     </property>
@@ -130,15 +130,15 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>460</x>
-      <y>180</y>
-      <width>120</width>
-      <height>40</height>
+      <x>400</x>
+      <y>170</y>
+      <width>260</width>
+      <height>70</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>10</pointsize>
+      <pointsize>24</pointsize>
      </font>
     </property>
     <property name="text">
@@ -148,15 +148,15 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>460</x>
-      <y>270</y>
-      <width>140</width>
-      <height>40</height>
+      <x>400</x>
+      <y>260</y>
+      <width>260</width>
+      <height>70</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>10</pointsize>
+      <pointsize>24</pointsize>
      </font>
     </property>
     <property name="text">
@@ -166,8 +166,8 @@
    <widget class="QPushButton" name="registerButton">
     <property name="geometry">
      <rect>
-      <x>460</x>
-      <y>360</y>
+      <x>470</x>
+      <y>380</y>
       <width>311</width>
       <height>71</height>
      </rect>
@@ -319,16 +319,16 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>14</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
+      <pointsize>24</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
      </font>
     </property>
     <property name="autoFillBackground">
      <bool>false</bool>
     </property>
     <property name="styleSheet">
-     <string notr="true">background:rgb(109, 169, 225)</string>
+     <string notr="true">background-color: rgb(109, 169, 225);</string>
     </property>
     <property name="text">
      <string>Guardar</string>
@@ -341,7 +341,7 @@
     <property name="geometry">
      <rect>
       <x>640</x>
-      <y>240</y>
+      <y>250</y>
       <width>121</width>
       <height>17</height>
      </rect>
@@ -428,7 +428,7 @@
     <property name="geometry">
      <rect>
       <x>650</x>
-      <y>310</y>
+      <y>340</y>
       <width>121</width>
       <height>17</height>
      </rect>
