--- a/UserExperience/views/register.ui
+++ b/UserExperience/views/register.ui
@@ -102,8 +102,8 @@
    <widget class="QLineEdit" name="studentId">
     <property name="geometry">
      <rect>
-      <x>490</x>
-      <y>180</y>
+      <x>540</x>
+      <y>190</y>
       <width>200</width>
       <height>50</height>
      </rect>
@@ -117,8 +117,8 @@
    <widget class="QLineEdit" name="carrera">
     <property name="geometry">
      <rect>
-      <x>490</x>
-      <y>260</y>
+      <x>540</x>
+      <y>270</y>
       <width>200</width>
       <height>50</height>
      </rect>
@@ -132,8 +132,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>160</y>
+      <x>330</x>
+      <y>170</y>
       <width>260</width>
       <height>70</height>
      </rect>
@@ -150,8 +150,8 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>250</y>
+      <x>330</x>
+      <y>260</y>
       <width>260</width>
       <height>70</height>
      </rect>
@@ -168,9 +168,9 @@
    <widget class="QLabel" name="mat_error">
     <property name="geometry">
      <rect>
-      <x>490</x>
-      <y>240</y>
-      <width>121</width>
+      <x>540</x>
+      <y>250</y>
+      <width>201</width>
       <height>17</height>
      </rect>
     </property>
@@ -191,10 +191,10 @@
    <widget class="QLabel" name="car_error">
     <property name="geometry">
      <rect>
-      <x>490</x>
-      <y>320</y>
-      <width>121</width>
-      <height>17</height>
+      <x>540</x>
+      <y>330</y>
+      <width>201</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="font">
@@ -214,8 +214,8 @@
    <widget class="QPushButton" name="registerButton">
     <property name="geometry">
      <rect>
-      <x>360</x>
-      <y>370</y>
+      <x>410</x>
+      <y>380</y>
       <width>310</width>
       <height>70</height>
      </rect>
@@ -228,7 +228,7 @@
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(109, 169, 225);</string>
+     <string notr="true">background: rgb(109, 169, 225);</string>
     </property>
     <property name="text">
      <string>Guardar</string>
